# Pico-Fever

./: .gitignore  .gitmodules  README.md
build_uf2/: Pico_Game_Controller.uf2
src/: CMakeLists.txt  button.h  controller_config.h  encoders.pio  general_config.h  pico_game_controller.cpp
src/config/: CMakeLists.txt  Profiles.h  SwitchProfiles.h  buttons.h  general_config.h
src/debounce/: debounce_include.h
src/gamepad/: CMakeLists.txt  buttons.h  gamepad.cpp  gamepad.h  report.h  rotaryencoder.cpp  rotaryencoder.h
src/hid/: CMakeLists.txt  HIDDescriptors.cpp  KeyboardDescriptors.cpp  KeyboardDescriptors.h  SwitchDescriptors.cpp  SwitchDescriptors.h  XInputDescriptors.cpp  XInputDescriptors.h  descriptors.h  hid.c  hid.h
src/rotary-encoder/: CMakeLists.txt  rotaryencoder.cpp  rotaryencoder.h
src/usb_driver/: descriptorHelper.c  descriptorHelper.h  keyboard_descriptors.h
src/ws2812/: color_cycle.c  rgb_include.h  turbocharger.c  ws2812b_util.c
